# resurgo

./: .env.example  .env.local.example  .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY-CHECKLIST.md  DEPLOYMENT_READY.md  DODO_SETUP.md  README.md  SECURITY.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_SETUP_CHECKLIST.md  _git_commit.bat  build-latest.txt  build-output.txt  capacitor.config.ts  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  test-results.txt  tsconfig.json  typecheck-output.txt  vercel.json
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
convex/: aiGreetings.ts  apiKeys.ts  auth.config.js  auth.config.ts  billingNotifications.ts  budget.ts  cancellationSurveys.ts  coachAI.ts  convex.config.ts  crons.ts  dailyCheckIns.ts  deepScan.ts  dodo.ts  emailAutomation.ts  fitness.ts  focusSessions.ts  gamification.ts  goals.ts  growthAnalytics.ts  habits.ts  http.ts  insights.ts  leads.ts  marketing.ts  metaMarketing.ts  partnerEngine.ts  payments.ts  pushNotifications.ts  reminders.ts  restApi.ts  schema.ts  tasks.ts  telegramActions.ts  tsconfig.json  users.ts  visionBoards.ts  wealth.ts  weeklyReviews.ts  wellness.ts  wishlist.ts
docs/: 00-START-HERE.md  14-DAY-GROWTH-SPRINT.md  API.md  BRAND_VOICE.md  CODE_STANDARDS.md  COMPETITIVE-ANALYSIS.md  CONTENT-AND-ADS-PLAYBOOK-2026.md  DAILY-CHECKLIST-14DAY.md  DESKTOP-SETUP.md  EXECUTION-STATUS.md  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+428 files in other folders)
