[package]
name = "resurgo"
version = "2.0.0"
description = "Resurgo — AI Productivity Assistant & Life Command Center"
authors = ["Resurgo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "resurgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "resurgo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "protocol-asset",
  "tray-icon",
] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
